# parut

./: Cargo.toml  LOGGING.md  README.md  install.sh  uninstall.sh  wiki.md
.github/workflows/: ci.yml
src/: data_store.rs  logger.rs  main.rs  paru.rs  search_helpers.rs  search_view_optimized.rs  settings.rs  style.css  task_queue.rs  ui.rs  utils.rs
